src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__svg_include_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\includesvg{foo/bar.svg}\"#)"

---
ROOT@0..24
  PREAMBLE@0..24
    SVG_INCLUDE@0..24
      SVG_INCLUDE_NAME@0..11 "\\includesvg"
      CURLY_GROUP_WORD_LIST@11..24
        L_CURLY@11..12 "{"
        WORD@12..23 "foo/bar.svg"
        R_CURLY@23..24 "}"

