src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__theorem_definition_name_with_counter.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\newtheorem{foo}[bar]\"#)"

---
ROOT@0..21
  PREAMBLE@0..21
    THEOREM_DEFINITION@0..21
      THEOREM_DEFINITION_NAME@0..11 "\\newtheorem"
      CURLY_GROUP_WORD@11..16
        L_CURLY@11..12 "{"
        WORD@12..15 "foo"
        R_CURLY@15..16 "}"
      BRACK_GROUP_WORD@16..21
        L_BRACK@16..17 "["
        WORD@17..20 "bar"
        R_BRACK@20..21 "]"
      MISSING@21..21 ""

