src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__theorem_definition_only_name.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\newtheorem{foo}\"#)"

---
ROOT@0..16
  PREAMBLE@0..16
    THEOREM_DEFINITION@0..16
      THEOREM_DEFINITION_NAME@0..11 "\\newtheorem"
      CURLY_GROUP_WORD@11..16
        L_CURLY@11..12 "{"
        WORD@12..15 "foo"
        R_CURLY@15..16 "}"
      MISSING@16..16 ""

