src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__tikz_library_import_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\usetikzlibrary{foo}\"#)"

---
ROOT@0..20
  PREAMBLE@0..20
    TIKZ_LIBRARY_IMPORT@0..20
      TIKZ_LIBRARY_IMPORT_NAME@0..15 "\\usetikzlibrary"
      CURLY_GROUP_WORD_LIST@15..20
        L_CURLY@15..16 "{"
        WORD@16..19 "foo"
        R_CURLY@19..20 "}"

