src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__unmatched_brackets.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"][\"#)"

---
ROOT@0..2
  PREAMBLE@0..2
    ERROR@0..1
      R_BRACK@0..1 "]"
    MIXED_GROUP@1..2
      L_BRACK@1..2 "["
      MISSING@2..2 ""

