src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__unmatched_brackets_with_group.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"{][}\"#)"

---
ROOT@0..4
  PREAMBLE@0..4
    CURLY_GROUP@0..4
      L_CURLY@0..1 "{"
      ERROR@1..2
        R_BRACK@1..2 "]"
      MIXED_GROUP@2..4
        L_BRACK@2..3 "["
        R_CURLY@3..4 "}"
      MISSING@4..4 ""

