src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__verbatim_include_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\verbatiminput{foo/bar.txt}\"#)"

---
ROOT@0..27
  PREAMBLE@0..27
    VERBATIM_INCLUDE@0..27
      VERBATIM_INCLUDE_NAME@0..14 "\\verbatiminput"
      CURLY_GROUP_WORD_LIST@14..27
        L_CURLY@14..15 "{"
        WORD@15..26 "foo/bar.txt"
        R_CURLY@26..27 "}"

